removed Immutable* collections from guava package